FreeST/test/Programs/ValidTests/SessionTypes/typedefSkip/typedefSkip.fst
type T : SU = Skip

main : (T, T)
main = new T
