FreeST/test/Programs/InvalidTests/nonContractiveTypeDef/nonContractiveTypeDef.fst
type T = T

main : T
main = 'a'
